kubernetes/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
spec:
  tls:
  - hosts:
    - api.marcote.org
    secretName: wildcard-marcote-org
  rules:
  - host: api.marcote.org
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 5000
        path: /
